fixed about image on mobile

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,7 +61,7 @@ h2 {
 }
 
 .maxHeightSponsorDiv {
-    height: 350px;
+    height: 300px;
 }
 
 img-circle {
